<resources>

    <string name="string_empty"></string>

    <!-- TICKETS -->
    <string name="ticket_filter">Filtro</string>
    <string name="ticket_history_opened">Histórico dos boletos em aberto</string>
    <string name="ticket_button_see_details">VER DETALHE</string>
    <string name="ticket_value">Valor</string>
    <string name="ticket_due">Vencimento</string>
    <string name="ticket_paid">Pago</string>
    <string name="ticket_open">Em Aberto</string>
    <string name="ticket_year_month">Ano / Mês</string>
    <string name="ticket_year">Ano</string>

    <string name="ticket_detail_due">Vencimento %s</string>
    <string name="ticket_details_copy_code">Código de barras copiado com sucesso</string>
    <string name="ticket_detail_code_payment">Código de barra para pagamento:</string>
    <string name="ticket_detail_button_copy_code">Copiar Código de Barras</string>
    <string name="ticket_detail_see_document">Ver PDF</string>

    <!-- ERROR -->
    <string name="title_error_oops">Oops!</string>
    <string name="text_ok">OK</string>

    <!-- FACTOR EXTRACTOR -->
    <string name="factor_extractor_select_month">Mês</string>
    <string name="factor_extractor_select_year">Ano</string>
    <string name="next">Próximo</string>
    <string name="apply">Aplicar</string>
    <string name="clean_filter">Limpar Filtro</string>
    <string name="ticket_detail_copy_code">% Código Copiado</string>
    <string name="factor_extractor_filter">Filtrar</string>
    <string name="factor_extractor_clean_filter">Limpar Filtro</string>
    <string name="factor_extractor_empty_filter"><![CDATA[Por favor, selecione o <b>Ano</b> e <b>Mês</b> desejado]]></string>
    <string name="select_all">Selecionar tudo</string>


    <!-- GUIDE AUTHORIZER -->
    <string name="title_activity_guide_authorizer">GuideAuthorizerActivity</string>
    <string name="guide_authorizer">Autorizador de Guias</string>
    <string name="guide_authorizer_request_exam">Solicitação de Exame e Procedimentos</string>
    <string name="previous">Previous</string>
    <string name="guide_authorizer_new_request">Nova Solicitação</string>
    <string name="guide_authorizer_send">Enviar Solicitação</string>
    <string name="beneficiary_data">Dados do Beneficiário</string>
    <string name="request_data">Dados da Solicitação</string>
    <string name="text_input_email">Insira seu e-mail</string>
    <string name="confirm">Confirmar</string>

    <!--Delete Profile Activity Screen-->
    <string name="delete_profile_title">Excluir Cadastro</string>
    <string name="delete_profile_subtitle">Todos os dados do seu cadastro serão excluidos permanentemente.</string>
    <string name="delete_profile_information">Ao clicar no botão excluir, seu cadastro no App Policlin Saúde e PIN-SS (Portal de Informação do Beneficiário de Saúde Suplementar) será excluído e você perderá acesso às funcionalidades após a exclusão.</string>
    <string name="delete_profile_button">Excluir</string>
    <string name="delete_profile_button_cancel">Não</string>
    <string name="delete_profile_button_modal">Sim</string>
    <string name="delete_profile_title_modal">Confirmar Exclusão</string>
    <string name="delete_profile_modal_title"> Essa ação excluirá o seu cadastro no App  e PIN-SS, Deseja continuar?</string>
    <string name="delete_profile_deleted">Cadastro excluído com sucesso!</string>
    <string name="delete_profile_deleted_modal">Você poderá se cadastrar novamente caso permaneça como beneficiário.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>