<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:theme="@style/AppTheme">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/ticket_detail_background_values"
            android:orientation="vertical">

            <TextView
                style="@style/Primary.Text.Style.Bold"
                android:id="@+id/textview_date_ticket_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@color/blue_1"
                android:gravity="center"
                tools:text="05/2022" />

            <TextView
                style="@style/Primary.Text.Style.Bold"
                android:id="@+id/textview_value_ticket_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="32sp"
                android:textColor="@color/blue_1"
                android:gravity="center"
                tools:text="R$ 241,61" />

            <TextView
                style="@style/Primary.Text.Style.Bold"
                android:id="@+id/textview_due_ticket_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="@color/gray_4"
                android:gravity="center"
                tools:text="vencimento 10/05/2022" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout_items"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Primary.Text.Style.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:textSize="22sp"
                android:textColor="@color/gray_4"
                android:gravity="center"
                android:text="@string/ticket_detail_code_payment" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:paddingVertical="36dp"
                android:background="@drawable/ticket_detail_background_codes"
                android:orientation="vertical">

                <TextView
                    style="@style/Primary.Text.Style.Bold"
                    android:id="@+id/textview_code_ticket_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/gray_4"
                    android:gravity="center"
                    tools:text="03399492813G982208005033261010238000000000000" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/button_copy_code_ticket_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/button_primary_border"
                android:text="@string/ticket_detail_button_copy_code"
                android:textColor="@color/gray_4"
                app:layout_constraintTop_toBottomOf="@id/view_middle"/>

            <Button
                style="@style/Primary.Button.Style"
                android:id="@+id/button_see_pdf_ticket_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/button_secondary"
                android:text="@string/ticket_detail_see_document"
                android:textColor="@color/lightText"
                app:layout_constraintTop_toBottomOf="@id/view_middle"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>