<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/AppTheme" >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView_tickets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayout_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:background="@drawable/ticket_dropdown_background"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/ticket_dropdown_arrow_down"
                    android:src="@drawable/ic_arrow_down"
                    android:tint="@color/white"/>

                <TextView
                    style="@style/Primary.Text.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/ticket_filter"
                    android:textColor="@color/gray_2"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="4dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:background="@color/colorPrimary"/>

                        <TextView
                            style="@style/Primary.Text.Style.Bold"
                            android:id="@+id/textview_open_ticket"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:background="@color/white"
                            android:textSize="26sp"
                            android:gravity="center"
                            tools:text="05/2022" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/divider"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/linearLayout_value"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/view_middle">

                                <TextView
                                    style="@style/Primary.Text.Style.Bold"
                                    android:id="@+id/textview_value_open_ticket"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:textColor="@color/green_1"
                                    android:textSize="14sp"
                                    android:gravity="center"
                                    tools:text="R$ 241,61" />

                                <TextView
                                    style="@style/Primary.Text.Style.Bold"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/ticket_value"
                                    android:textColor="@color/black"
                                    android:gravity="center"/>


                            </androidx.appcompat.widget.LinearLayoutCompat>

                            <View
                                android:id="@+id/view_middle"
                                android:layout_width="4dp"
                                android:layout_height="match_parent"
                                android:background="@color/divider"
                                app:layout_constraintBottom_toBottomOf="@id/linearLayout_due_date"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/linearLayout_due_date"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                app:layout_constraintStart_toEndOf="@id/view_middle"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    style="@style/Primary.Text.Style.Bold"
                                    android:id="@+id/textview_due_open_ticket"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:textColor="@color/green_1"
                                    android:textSize="14sp"
                                    android:gravity="center"
                                    tools:text="10/05/2022" />

                                <TextView
                                    style="@style/Primary.Text.Style.Bold"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/ticket_due"
                                    android:textColor="@color/black"
                                    android:gravity="center"/>

                            </androidx.appcompat.widget.LinearLayoutCompat>

                            <Button
                                android:id="@+id/sendButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginHorizontal="30dp"
                                android:background="@drawable/button_secondary_border"
                                android:text="@string/ticket_button_see_details"
                                android:textColor="@color/lightText"
                                app:layout_constraintTop_toBottomOf="@id/view_middle"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorPrimary"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:background="@drawable/ticket_history_background">

                <TextView
                    style="@style/Primary.Text.Style.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/gray_2"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/ticket_history_opened" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_tickets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginHorizontal="26dp"
                    android:scrollbars="none"
                    tools:listitem="@layout/adapter_tickets"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:spanCount="10" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>